# swt-python

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  build.sh  ccvwrapper.c  ccvwrapper.h  ccvwrapper.i  example.py  main.py  readme.md  requirements.txt  swt_python3.cpp
pybind11/: CMakeLists.txt
